@@ -6,6 +6,8 @@ ostree (2016.5-4) UNRELEASED; urgency=medium
   * Build-depend on procps, used to check for leaked processes
   * debian/test.sh: factor out our dh_auto_test wrapper, and clean
     up any stray processes even if the test fails
+  * If build-time tests fail, try 4 more times to get an idea of
+    whether the failure is reproducible
 
  -- Simon McVittie <smcv@debian.org>  Sat, 11 Jun 2016 19:52:40 +0100
 
